--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>マサヤヌ*ブーンタ 6352100724</title>
-  </head>
-  <body>
-    <h1>Hello World</h1><br>
-    <b><i>Hi MIW</i><br>
-    <b>Masayanun Boonta 6352100724 (DIT)</b>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>マサヤヌ*ブーンタ 6352100724</title>
+</head>
+
+<body>
+  <h1>Hello World</h1><br>
+  <b><i>Hi MIW</i><br>
+    <b>นางสาวเมษญานันจ์ บุญตา 6352100724 (DIT)</b>
+</body>
+
 </html>
